tests/typecheck/bad/substr.scilla
(* substr_test.scilla *)
let s = "Foo42" in
let start = Uint128 0 in
let len = Uint256 3 in
builtin substr s start len
